[tool.poetry]
name = "aiopool"
version = "0.1.0"
description = "asyncio-powered coroutine worker pool"
license = "MIT"
authors = ["Kevin Kirsche <kev.kirsche@gmail.com>"]
include = ["README.md", "LICENSE"]

[[tool.poetry.packages]]
from = "src"
include = "aiopool"

[tool.poetry.dependencies]
python = ">=3.10, <4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
example-isort-formatting-plugin = "^0.0.4"
black = "^22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiopool-example = "aiopool.example:run_example"

[tool.isort]
formatter = "example"
profile = "black"
remove_redundant_aliases = true
sort_order = "natural"

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.mypy]
follow_imports = "normal"
platform = "linux"
plugins = []
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
